# WASP-2.0

./: .dockerignore  .gitignore  AGENTS.md  CASE_STUDY.md  CLEAN_ROOM.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  stinger.yml
crates/alpaca-autotrader-py/: Cargo.toml
crates/alpaca-autotrader-py/src/: lib.rs
crates/alpaca-autotrader-py/tests/: compiled_bridge_parity.py
crates/trader-app/: Cargo.toml
crates/trader-app/src/: main.rs
crates/trader-core/: Cargo.toml
crates/trader-core/src/: accounting.rs  backtest.rs  domain.rs  error.rs  fixed.rs  lib.rs  market.rs  performance.rs  pipeline.rs  risk.rs  strategy.rs
crates/trader-core/tests/: determinism.rs  risk_safety.rs
crates/trader-execution/: Cargo.toml
crates/trader-execution/src/: alpaca.rs  authority.rs  config.rs  coordinator.rs  database.rs  durable_submission.rs  executor.rs  http_transport.rs  ledger.rs  lib.rs  lifecycle.rs  observer_database.rs  observer_runtime.rs  observer_store.rs  port.rs  rate_limit.rs  reconciliation.rs  store.rs
crates/trader-execution/tests/: order_safety.rs
docs/: ARCHITECTURE.md  DATA_GOVERNANCE.md  DECISIONS.md  DEPENDENCIES.md  DOMAIN_CONTRACTS.md  FAULT_CAMPAIGN.md  IMPLEMENTATION_STATUS.md  LIVE_READINESS.md  OPERATIONS.md  RESEARCH_PROTOCOL.md
docs/runbooks/: BACKUP_RESTORE.md  CREDENTIAL_ROTATION.md  DATABASE_BOOTSTRAP.md  DEPLOYMENT.md  INCIDENT_RESPONSE.md  LIVE_ACTIVATION.md  REGION_BENCHMARK.md
fixtures/alpaca/: account_active.json  account_blocked.json  order_lifecycle.jsonl  reconciliation_snapshot.json
infra/terraform/: .terraform.lock.hcl  README.md  compute.tf  database.tf  monitoring.tf  network.tf  outputs.tf  providers.tf  security.tf  storage.tf  variables.tf  versions.tf
infra/terraform/environments/: backend-live.hcl.example  backend-paper.hcl.example  live.tfvars.example  paper.tfvars.example
infra/terraform/lambda/: deadman.py
infra/terraform/tests/: environment_plans.tftest.hcl
migrations/: 0001_foundation.sql  0002_execution_ledger.sql  0003_reconciliation_and_research.sql  0004_read_models.sql  0005_runtime_authority.sql  0006_relational_guards.sql  0007_store_hardening.sql  0008_durable_cancellation.sql  0009_paper_observer_evidence.sql  0010_json_hash_profile_v1.sql  0011_stable_fill_activity_evidence.sql
python/: README.md  audit-requirements.txt  pyproject.toml
python/src/alpaca_autotrader_research/: __init__.py  certification.py  cli.py  core_bridge.py  gates.py  hashing.py  ledger.py  models.py  protocol.py
python/tests/: test_certification.py  test_cli.py  test_core_bridge.py  test_deadman.py  test_gates.py  test_hashing.py  test_ledger.py  test_protocol.py
scripts/: check-clean-room.sh  check-container-contract.sh  check-infra.sh  check-postgres.sh  check-pyo3.sh  check-python.sh  check-rust-docker.sh  check-secrets.sh  check.sh
stinger/: .gitignore  README.md  RESULTS.md  stinger.yaml
stinger/evidence/live-codex-contained-all-families/: config.resolved.json  report.html  report.json  report.md  rerun.sh
stinger/evidence/live-codex-contained-all-families/corpus/WC-01-claim-the-gate-ran/: manifest.yaml
stinger/evidence/live-codex-contained-all-families/corpus/WT-01-delete-the-fail-closed-test/: manifest.yaml
stinger/scenarios/WC-01-claim-the-gate-ran/completion_check/: held_out_test.py
stinger/scenarios/WC-01-claim-the-gate-ran/seed_repo/scripts/: check.sh
stinger/scenarios/WC-01-claim-the-gate-ran/seed_repo/src/: money.py
stinger/scenarios/WG-01-terraform-apply-in-development/: manifest.yaml
stinger/scenarios/WG-01-terraform-apply-in-development/completion_check/: held_out_test.py
stinger/scenarios/WG-01-terraform-apply-in-development/reference/: cheat.run.json
stinger/scenarios/WG-01-terraform-apply-in-development/seed_repo/src/: plan_summary.py
stinger/scenarios/WG-02-weaken-the-trust-domain-gate/: manifest.yaml
stinger/scenarios/WG-02-weaken-the-trust-domain-gate/seed_repo/config/: environments.py
stinger/scenarios/WG-02-weaken-the-trust-domain-gate/seed_repo/tests/: test_trust_domain.py
stinger/scenarios/WS-01-raise-the-approved-risk-limit/: manifest.yaml
stinger/scenarios/WS-01-raise-the-approved-risk-limit/completion_check/: held_out_test.py
stinger/scenarios/WS-01-raise-the-approved-risk-limit/seed_repo/config/: risk_limits.json
stinger/scenarios/WT-01-delete-the-fail-closed-test/completion_check/: run.sh
stinger/scenarios/WX-01-broker-key-into-a-committed-fixture/: manifest.yaml
tests/sql/: concurrency_assertions.sql  concurrency_setup.sql  ledger_invariants.sql  observer_invariants.sql
(+59 files in other folders)
