[workspace]
resolver = "2"
members = [
    "crates/trader-core",
    "crates/trader-execution",
    "crates/trader-app",
    "crates/alpaca-autotrader-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false
rust-version = "1.88"

[workspace.dependencies]
anyhow = "=1.0.104"
async-trait = "=0.1.81"
chrono = { version = "=0.4.38", features = ["serde"] }
clap = { version = "=4.5.16", features = ["derive"] }
hex = "=0.4.3"
pyo3 = { version = "=0.29.0", features = ["abi3-py310", "extension-module"] }
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls"] }
rustls = { version = "=0.23.42", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pki-types = "=1.15.0"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["arbitrary_precision"] }
sha2 = "=0.10.8"
thiserror = "=1.0.63"
tokio = { version = "=1.53.0", features = ["macros", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-postgres = { version = "=0.7.18", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres-rustls = { version = "=0.14.0", default-features = false, features = ["aws-lc-rs"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "=1.10.0", features = ["serde", "v4", "v5"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
