[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-autotrader-research"
version = "0.1.0"
description = "Clean-room research orchestration for the Alpaca autonomous trader"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Private operator"}]
dependencies = []

[project.scripts]
alpaca-research = "alpaca_autotrader_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py312"
