[package]
name = "alpaca-autotrader"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "alpaca-autotrader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trader-core = { path = "../trader-core" }
trader-execution = { path = "../trader-execution" }
