[package]
name = "trader-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
trader-core = { path = "../trader-core" }

[dev-dependencies]
tokio.workspace = true
